Several validations and fixes. Now using PG as dbms

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,8 +9,8 @@ default: &default
   pool: 5
   timeout: 5000
   host: localhost
-  username: tegik
-  password: kopoyeba
+  username: postgres
+  password: 123
 
 development:
   <<: *default
